2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/2MG.cs:
	* DiscImageChef.csproj:
	* ImagePlugins/Apple2MG.cs:
	  Implement support for Apple 2IMG disk images.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/SpamSumContext.cs:
	  Implemented SpamSum fuzzy hashing.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/FletcherContext.cs:
	  Implemented Fletcher-16 and Fletcher-32 checksum algorithms.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	  Added CRC16 to checksum command.

2015-04-19  Natalia Portillo  <claunia@claunia.com>

	* Options.cs:
	* Commands/Checksum.cs:
	* DiscImageChef.csproj:
	* Checksums/Adler32Context.cs:
	  Added Adler-32 checksum

2015-03-22  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ProDOS.cs:
	* DiscImageChef.csproj:
	  Implemented support for Apple ProDOS/SOS filesystem
	  (untested).

2015-03-21  Natalia Portillo  <claunia@claunia.com>

	* Decoders/DVD.cs:
	* Decoders/MMC.cs:
	* DiscImageChef.csproj:
	* ImagePlugins/ImagePlugin.cs:
	  Added DVD structures.

2015-03-05  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/DiskCopy42.cs:
	  Correct typo in DC42 tag checksumming.

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC64Context.cs:
	  Endian typoness

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC32Context.cs:
	  Corrected poly and endian issues.

2015-02-02  Natalia Portillo  <claunia@claunia.com>

	* Checksums/CRC16Context.cs:
	  Corrected poly, solved endian problem

2014-04-21  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	  Start to implement OpenImage(), decode comment block.

2014-04-21  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs: